--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title> การบ้านที่ 1 โปรแกรมเครื่องคิดเลข </title>
 
     <!-- นำเข้าไฟล์ตกแต่ง CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- นำเข้าไฟล์จาวาสคริปที่เพิ่มฟังก์ชั่นให้กับเว็บเรา -->
     <script src="/js/javascript.js"></script>
@@ -22,51 +22,50 @@
     </h1>
 
     <!-- ส่วนหลักของเครื่องคิดเลข -->
-    <div id="calc">
-      <!-- ส่วนแสดงผลตัวเลข -->
-      <div id="outputPanel">
-        <input id="display" type="text" readonly> <br>
+    <div class="container">
+      <div class="calculator dark">
+          <div class="theme-toggler active">
+              <i class="toggler-icon"></i>
+          </div>
+          <div class="display-screen">
+              <div id="display"></div>
+          </div>
+          <div class="buttons">
+              <table>
+                  <tr>
+                      <td><button class="btn-operator" id="clear">C</button></td>
+                      <td><button class="btn-operator" id="/">&divide;</button></td>
+                      <td><button class="btn-operator" id="*">&times;</button></td>
+                      <td><button class="btn-operator" id="backspace"><</button></td>
+                  </tr>
+                  <tr>
+                      <td><button class="btn-number" id="7">7</button></td>
+                      <td><button class="btn-number" id="8">8</button></td>
+                      <td><button class="btn-number" id="9">9</button></td>
+                      <td><button class="btn-operator" id="-">-</button></td>
+                  </tr>
+                  <tr>
+                      <td><button class="btn-number" id="4">4</button></td>
+                      <td><button class="btn-number" id="5">5</button></td>
+                      <td><button class="btn-number" id="6">6</button></td>
+                      <td><button class="btn-operator" id="+">+</button></td>
+                  </tr>
+                  <tr>
+                      <td><button class="btn-number" id="1">1</button></td>
+                      <td><button class="btn-number" id="2">2</button></td>
+                      <td><button class="btn-number" id="3">3</button></td>
+                      <td rowspan="2"><button class="btn-equal" id="equal">=</button></td>
+                  </tr>
+                  <tr>
+                      <td><button class="btn-operator" id="(">(</button></td>
+                      <td><button class="btn-number" id="0">0</button></td>
+                      <td><button class="btn-operator" id=")">)</button></td>
+                  </tr>
+              </table>
+          </div>
       </div>
-      <br><br>
-
-      <!-- ส่วนปุ่มที่เอาไว้ใช้กด -->
-      <div id="inputPanel">
-
-        <!-- ปุ่มต่างๆ ที่มีค่า attribute id, class, type, value, onclick -->
-        <!--  id = ไอดีของปุ่มนั้นๆ
-              class = คลาสของปุ่มนั้นๆ
-              type = ชนิดของปุ่มนั้นๆ
-              value = ค่าตัวอักษรที่ใช้กำกับปุ่มนั้นๆ
-              onclick = เมื่อคลิกที่ปุ่มให้ทำอะไร
-                ตัวอย่าง onclick="oneClicked()" แปลว่าเมื่อคลิกให้เรียกฟังก์ชั่น oneClicked() ซึ่งเราประกาศไว้ในไฟล์ javascript
-        -->
-
-        <!-- คำสั่ง ให้นร.แก้ไขไฟล์ HTML นี้ให้มีหน้าจอแสดงผลสวยงามตามที่โปรแกรมเครื่องคิดเลขควรจะเป็น
-              ตัวอย่างสามารถดูได้ในโปรแกรม calculator ใน windows
-        -->
-        <input id="one" class="bt bt-num" type="button" value="1" onclick="oneClicked()">
-        <input id="two" class="bt bt-num" type="button" value="2" onclick="twoClicked()">
-        <input id="three" class="bt bt-num" type="button" value="3" onclick="threeClicked()">
-        <input id="four" class="bt bt-num" type="button" value="4" onclick="fourClicked()">
-        <input id="five" class="bt bt-num" type="button" value="5" onclick="fiveClicked()">
-        <input id="six" class="bt bt-num" type="button" value="6" onclick="sixClicked()">
-        <input id="seven" class="bt bt-num" type="button" value="7" onclick="sevenClicked()">
-        <input id="eight" class="bt bt-num" type="button" value="8" onclick="eightClicked()">
-        <input id="nine" class="bt bt-num" type="button" value="9" onclick="nineClicked()">
-        <input id="zero" class="bt bt-num" type="button" value="0" onclick="zeroClicked()">
-        <input id="dot" class="bt bt-num" type="button" value="." onclick="dotClicked()">
-        <input id="plus" class="bt bt-ops" type="button" value="+" onclick="plusClicked()">
-        <input id="minus" class="bt bt-ops" type="button" value="-" onclick="minusClicked()">
-        <input id="multiply" class="bt bt-ops" type="button" value="x" onclick="multiplyClicked()">
-        <input id="divide" class="bt bt-ops" type="button" value="÷" onclick="divideClicked()">
-        <input id="equal" class="bt bt-ops" type="button" value="=" onclick="equalClicked()">
-        <input id="del" class="bt bt-del" type="button" value="del" onclick="delClicked()">
-        <input id="clear" class="bt bt-clear" type="button" value="C" onclick="clearClicked()">
-        <!-- Optional buttons ส่วนข้างล่างนี้จะทำหรือไม่ทำก็ได้ -->
-        <input id="parenthesis-open" class="bt bt-optional" type="button" value="(" onclick="poClicked()">
-        <input id="parenthesis-close" class="bt bt-optional" type="button" value=")" onclick="pcClicked()">
-      </div>
-    </div>
+  </div>
+  <script src="js/javascript.js"></script>
   </body>
 </html>
 
